--- a/MultimediaServer/app/src/main/AndroidManifest.xml
+++ b/MultimediaServer/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Controller.MainActivity">
+        <activity android:name=".Controller.MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,9 +22,12 @@
 
         <service android:name=".Controller.MusicFragment" />
 
-        <activity android:name=".SettingActivity" />
-        <activity android:name=".View.MusicActivity" />
-        <activity android:name=".View.MovieActivity" />
+        <activity android:name=".SettingActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".View.MusicActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".View.MovieActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
